--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,4 +17,6 @@ body {
     padding: 2rem;
     border-radius: 10px;
     margin-bottom: 1rem;
+    position: relative;
+    z-index: 10;
 }
